# Asdil

./: Asdil.py  README.md  dd  pyproject.toml  setup.py
Asdil/: Asdil.py  __init__.py  code.py  fo.py  log.py  mail.py  mysql.py  ssh.py  tab.py  tool.py
Asdil.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
